# egctl

./: .gitlab-ci.yml  60-endgamegear.rules  Cargo.toml  README.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
src/: cli.rs  device.rs  main.rs  protocol.rs
src/types/: config.rs  keys.rs  mapping.rs  mod.rs
